--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🗳️ Vote for Your Favorites.. Candidate</h1>
+    <h1>🗳️ Vote for Your Favorites..vvn Candidate</h1>
     <div class="cards">
       <div class="card" data-id="Candidate 1">
         <h2>🎯 Candidate 1</h2>
