--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Voting App</title>
+  <title>This or That Quiz</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>🗳️ Vote for Your Favorites..vvn Candidate</h1>
-    <div class="cards">
-      <div class="card" data-id="Candidate 1">
-        <h2>🎯 Candidate 1</h2>
-        <button class="vote-btn">Vote</button>
-      </div>
-      <div class="card" data-id="Candidate 2">
-        <h2>🚀 Candidate 2</h2>
-        <button class="vote-btn">Vote</button>
+  <div class="quiz-container">
+    <h1>⚡ This or That Quiz</h1>
+    <div class="card">
+      <div class="question" id="question">Loading...</div>
+      <div class="choices">
+        <button class="choice-btn" id="choiceA">Option A</button>
+        <span>vs</span>
+        <button class="choice-btn" id="choiceB">Option B</button>
       </div>
     </div>
-    <p class="vote-message"></p>
-    <button id="resetBtn" style="display: none;">🔁 Vote Again</button>
+    <div class="result" id="result" style="display: none;"></div>
+    <button id="restartBtn" style="display: none;">🔄 Try Again</button>
   </div>
   <script src="script.js"></script>
 </body>
